WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46327
[Qt] box-shadow does not blur (is solid) when using border-radius
https://bugs.webkit.org/show_bug.cgi?id=46327
Summary
[Qt] box-shadow does not blur (is solid) when using border-radius
Helder Correia
Reported
2010-09-22 17:54:33 PDT
Created
attachment 68482
[details]
Showing difference between Chrome/Safari and QtTestBrowser Attached a picture showing the issue. Test case: <!DOCTYPE html> <html> <style type="text/css"> div { box-shadow: 2px 2px 6px rgba(200,0,0,0.6); border-radius: 95px 95px; padding-top: 95px; } </style> <body><div/></body> </html> See also: 36939, 29563
Attachments
Showing difference between Chrome/Safari and QtTestBrowser
(103.97 KB, image/png)
2010-09-22 17:54 PDT
,
Helder Correia
no flags
Details
Test case
(194 bytes, text/html)
2010-09-22 17:56 PDT
,
Helder Correia
no flags
Details
Patch
(1.96 KB, patch)
2010-11-01 16:44 PDT
,
Helder Correia
no flags
Details
Formatted Diff
Diff
Patch 2
(2.28 KB, patch)
2010-11-01 22:45 PDT
,
Helder Correia
no flags
Details
Formatted Diff
Diff
Include updated basic-shadows test.
(55.04 KB, patch)
2010-11-05 16:50 PDT
,
Helder Correia
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Helder Correia
Comment 1
2010-09-22 17:56:42 PDT
Created
attachment 68483
[details]
Test case
Helder Correia
Comment 2
2010-11-01 16:44:19 PDT
Created
attachment 72597
[details]
Patch
Helder Correia
Comment 3
2010-11-01 16:45:39 PDT
Added proposed patch for feedback. Please note that a test is missing, I'll take care of that.
Helder Correia
Comment 4
2010-11-01 22:45:34 PDT
Created
attachment 72630
[details]
Patch 2 Optimize when not blurring.
Ariya Hidayat
Comment 5
2010-11-05 10:12:18 PDT
Please attach test case (or test baseline).
Helder Correia
Comment 6
2010-11-05 16:50:15 PDT
Created
attachment 73140
[details]
Include updated basic-shadows test.
Andreas Kling
Comment 7
2010-11-07 17:29:38 PST
Comment on
attachment 73140
[details]
Include updated basic-shadows test. r=me
Ariya Hidayat
Comment 8
2010-11-07 17:44:22 PST
Comment on
attachment 73140
[details]
Include updated basic-shadows test. Let me block cq, since it depends on 48223
Andreas Kling
Comment 9
2010-11-07 18:55:04 PST
Committed
r71488
: <
http://trac.webkit.org/changeset/71488
>
Antonio Gomes
Comment 10
2010-11-08 10:39:25 PST
***
Bug 29563
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug