2010-11-05  Helder Correia  <helder@sencha.com>

Reviewed by Andreas Kling.

        [Qt] box-shadow does not blur (is solid) when using border-radius
        https://bugs.webkit.org/show_bug.cgi?id=46327

        Implement blurred box-shadow when styling with border-radius.
        This change is related to https://bugs.webkit.org/show_bug.cgi?id=44488

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::fillRoundedRect):
2010-11-05  Helder Correia  <helder@sencha.com>

        Reviewed by Andreas Kling.

        [Qt] box-shadow does not blur (is solid) when using border-radius
        https://bugs.webkit.org/show_bug.cgi?id=46327

        Implement blurred box-shadow when styling with border-radius.
        This change is related to https://bugs.webkit.org/show_bug.cgi?id=44488

        * platform/qt/fast/box-shadow/basic-shadows-expected.checksum:
        * platform/qt/fast/box-shadow/basic-shadows-expected.png:


Canonical link: https://commits.webkit.org/61975@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71488 268f45cc-cd09-0410-ab3c-d52691b4dbfc